Bug 325459 Month view's relayout fails and variouos fixes to duration manipulation.  Team effort here, parts of the patch by mvl, michael.buettner@sun.com, and me. r=dmose